<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">

  <!--prevent clicks on the background-->
  <android.support.constraint.ConstraintLayout
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:clickable="true"
    android:focusable="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
  <!--end-->

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <android.support.v7.widget.CardView
      android:id="@+id/req_card"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:cardCornerRadius="8dp"
      app:cardElevation="8dp"
      app:cardUseCompatPadding="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
          android:id="@+id/headline"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:ems="16"
          android:textSize="20sp"
          android:text="@string/monopole_choice"
          android:textAlignment="center"
          app:layout_constraintBottom_toTopOf="@id/selection"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
          android:id="@+id/selection"
          android:layout_width="match_parent"
          android:layout_height="55dp"
          android:orientation="horizontal"
          android:background="@drawable/border"
          app:layout_constraintBottom_toTopOf="@id/send_btn"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/headline">
          <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:button="@null"
            android:drawableTop="@drawable/ic_wood"
            android:text="@string/wood"
            android:textColor="@color/transparent"
            android:textSize="0sp" />
          <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:button="@null"
            android:drawableTop="@drawable/ic_clay"
            android:text="@string/clay"
            android:textColor="@color/transparent"
            android:textSize="0sp" />
          <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:button="@null"
            android:drawableTop="@drawable/ic_sheep"
            android:text="@string/wool"
            android:textColor="@color/transparent"
            android:textSize="0sp" />
          <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:button="@null"
            android:drawableTop="@drawable/ic_wheat"
            android:text="@string/wheat"
            android:textColor="@color/transparent"
            android:textSize="0sp" />
          <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:button="@null"
            android:drawableTop="@drawable/ic_ore"
            android:text="@string/ore"
            android:textColor="@color/transparent"
            android:textSize="0sp" />
        </RadioGroup>

        <Button
          android:id="@+id/send_btn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:padding="8dp"
          android:text="@string/claim_resource"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/selection" />
      </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

  </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
