<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:background="@color/fragmentBackground">

  <!--prevent clicks on the background-->
  <android.support.constraint.ConstraintLayout
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:clickable="true"
    android:focusable="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
  <!--end-->

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <android.support.v7.widget.CardView
      android:id="@+id/offer_card"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:cardCornerRadius="8dp"
      app:cardElevation="8dp"
      app:cardUseCompatPadding="true"
      app:layout_constraintBottom_toTopOf="@id/req_card"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
          android:id="@+id/trade_offer_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:ems="16"
          android:text="@string/offer_resource"
          android:textAlignment="center"
          app:layout_constraintBottom_toTopOf="@id/trade_offer_selection"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
          android:id="@+id/trade_offer_selection"
          android:layout_width="match_parent"
          android:layout_height="55dp"
          android:orientation="horizontal"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/trade_offer_text">
          <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:button="@null"
            android:drawableTop="@drawable/ic_wood"
            android:text="@string/wood"
            android:textColor="@color/transparent"
            android:textSize="0sp" />
          <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:button="@null"
            android:drawableTop="@drawable/ic_clay"
            android:text="@string/clay"
            android:textColor="@color/transparent"
            android:textSize="0sp" />
          <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:button="@null"
            android:drawableTop="@drawable/ic_sheep"
            android:text="@string/wool"
            android:textColor="@color/transparent"
            android:textSize="0sp" />
          <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:button="@null"
            android:drawableTop="@drawable/ic_wheat"
            android:text="@string/wheat"
            android:textColor="@color/transparent"
            android:textSize="0sp" />
          <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:button="@null"
            android:drawableTop="@drawable/ic_ore"
            android:text="@string/ore"
            android:textColor="@color/transparent"
            android:textSize="0sp" />
        </RadioGroup>
      </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
      android:id="@+id/req_card"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:cardCornerRadius="8dp"
      app:cardElevation="8dp"
      app:cardUseCompatPadding="true"
      app:layout_constraintBottom_toTopOf="@id/send_trade_btn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/offer_card">

      <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
          android:id="@+id/trade_req_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:ems="16"
          android:text="@string/request_trade"
          android:textAlignment="center"
          app:layout_constraintBottom_toTopOf="@id/trade_req_selection"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
          android:id="@+id/trade_req_selection"
          android:layout_width="match_parent"
          android:layout_height="55dp"
          android:orientation="horizontal"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/trade_req_text">
          <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:button="@null"
            android:drawableTop="@drawable/ic_wood"
            android:text="@string/wood"
            android:textColor="@color/transparent"
            android:textSize="0sp" />
          <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:button="@null"
            android:drawableTop="@drawable/ic_clay"
            android:text="@string/clay"
            android:textColor="@color/transparent"
            android:textSize="0sp" />
          <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:button="@null"
            android:drawableTop="@drawable/ic_sheep"
            android:text="@string/wool"
            android:textColor="@color/transparent"
            android:textSize="0sp" />
          <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:button="@null"
            android:drawableTop="@drawable/ic_wheat"
            android:text="@string/wheat"
            android:textColor="@color/transparent"
            android:textSize="0sp" />
          <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:button="@null"
            android:drawableTop="@drawable/ic_ore"
            android:text="@string/ore"
            android:textColor="@color/transparent"
            android:textSize="0sp" />
        </RadioGroup>
      </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <Button
      android:id="@+id/send_trade_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:text="@string/trade"
      app:layout_constraintTop_toBottomOf="@id/req_card"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
  </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>