<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:background="#075C5F">

  <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/start_bg"
    android:scaleType="centerCrop" />

  <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/game_name"
      android:textAppearance="@style/CatTitleText1"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:letterSpacing="-0,5"
      android:alpha="0.8"/>

    <ImageView
      android:id="@+id/imageView"
      android:layout_width="240dp"
      android:layout_height="320dp"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="84dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:contentDescription="@string/author_name"
      android:src="@drawable/main_icon"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView"
      app:srcCompat="@drawable/main_icon" />

    <TextView
      android:id="@+id/textView2"
      android:layout_width="346dp"
      android:layout_height="38dp"
      android:layout_marginBottom="44dp"
      android:layout_marginTop="8dp"
      android:text="@string/author_name"
      android:textAlignment="center"
      android:textAppearance="@android:style/TextAppearance.Material.Subhead"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/connectButton" />

    <Button
      android:id="@+id/connectButton"
      style="@style/RoundedButton"
      android:layout_width="360dp"
      android:layout_height="46dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="40dp"
      android:text="@string/start_game"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView"
      android:textAllCaps="false"/>

  </android.support.constraint.ConstraintLayout>
</RelativeLayout>