<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.lmu.settlebattle.catanclient.MainActivity"
    >

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvTest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomContainer"
        android:padding="12dp"
        android:clipToPadding="false"
        />

    <LinearLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@android:color/white">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@android:color/white">
        <Button
            android:id="@+id/btnInsert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add"

            />

        <Button
            android:id="@+id/btnRitterkarte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ritter"

            />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="Del"
            android:visibility="gone"

            />

        <Button
            android:id="@+id/btnRitterkarte2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ritter2" />

        <Button
            android:id="@+id/btnMonopol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Monopol" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@android:color/white">
        <Button
            android:id="@+id/btnStreet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Straße" />
        <Button
            android:id="@+id/btnSieg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Siegpunkt" />
        <Button
            android:id="@+id/btnErfinder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Erfinderkarte" />
    </LinearLayout>


        <!-- ab hier nur Debug Buttons -->

        <Button
            android:id="@+id/btnMove"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/move"

            android:visibility="gone"
            />

        <Button
            android:id="@+id/btnScroll"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/scroll"
            android:visibility="gone"
            />



        <Spinner
            android:id="@+id/spinnerPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/btnRevert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vector_sync_black_24dp"
            android:visibility="gone"
            />

        <TextView
            android:id='@+id/tvMoveTo'
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_to"
            android:visibility="gone"
            />

        <Spinner
            android:id="@+id/spinnerMoveTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />
    </LinearLayout>

</RelativeLayout>
